--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="estilos.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="sss/sss.js"></script>
+	<script src="sss/sss.min.js"></script>
 	<script>
 	    jQuery(function($){
 	        $('.slider-testimonial').sss({
